feat: run JDT Worker on Java 8